...
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:textColorHint="@color/colorDivider"
            app:hintTextAppearance="@style/MyTextInputLayoutHintStyle">

            <EditText
                android:id="@+id/mobileNumber"
                style="@style/StyledTilEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="left"
                android:hint="@string/prompt_mobile_number"
...
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:textColorHint="@color/colorDivider"
            app:hintTextAppearance="@style/MyTextInputLayoutHintStyle">

            <EditText
                android:id="@+id/password"
                style="@style/StyledTilEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
...
